--- a/.github/ISSUE_TEMPLATE/python_quiz_beginner.yml
+++ b/.github/ISSUE_TEMPLATE/python_quiz_beginner.yml
@@ -16,8 +16,6 @@ body:
       label: Contact Details
       description: How can we get in touch with you when your quiz has been evaluated?
       placeholder: ex. email@example.com
-    validations:
-      required: false
   - type: dropdown
     id: call_func
     attributes:
@@ -32,8 +30,7 @@ body:
           value: func_name_call
         - label: func_name
           value: func_name_only
-      validations:
-        required: true
+      required: true
   - type: dropdown
     id: input_method
     attributes:
@@ -44,8 +41,7 @@ body:
           value: input_hello_world
         - label: input "Hello World"
           value: input_hello_world_no_parentheses
-      validations:
-        required: true
+      required: true
   - type: dropdown
     id: print_method
     attributes:
@@ -55,11 +51,8 @@ body:
         - label: print("Hello World")
           value: print_hello_world
         - label: print Hello World
-          value: print_hello_world
-        - label: print 'Hello World'
-          value: print-py27
-      validations:
-        required: true
+          value: print_hello_world_no_quotes
+      required: true
   - type: checkboxes
     id: terms
     attributes:
@@ -67,4 +60,4 @@ body:
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/GamerSoft24/Software/blob/Main/CODE_OF_CONDUCT.md)
       options:
         - label: I agree to follow this project's Code of Conduct
-          required: true
+      required: true
