--- a/.github/workflows/publish-docker_image.yml
+++ b/.github/workflows/publish-docker_image.yml
@@ -1,6 +1,10 @@
 name: Publish Docker image
 
 on:
+  push:
+    branches: ['Main']
+  pull_request:
+    branches: ['Main']
   release:
     types: [published]
 
