--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-*.iso filter=lfs diff=lfs merge=lfs -text
-*.exe filter=lfs diff=lfs merge=lfs -text
-*.7z filter=lfs diff=lfs merge=lfs -text
-*.zip filter=lfs diff=lfs merge=lfs -text
+git lfs track "*.iso"
+git lfs track "*.avi"
+git lfs track "*.mkv"
+git lfs track "*.mp3"
+git lfs track "*.mp4"
+git lfs track "*.zip"
+git lfs track "*.7z"
