--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-git lfs track "*.iso"
-git lfs track "*.avi"
-git lfs track "*.mkv"
-git lfs track "*.mp3"
-git lfs track "*.mp4"
-git lfs track "*.zip"
-git lfs track "*.7z"
+*.iso filter=lfs diff=lfs merge=lfs -text
+*.avi filter=lfs diff=lfs merge=lfs -text
+*.mkv filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
