--- a/.gitattributes
+++ b/.gitattributes
@@ -19,3 +19,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+*.yml text eol=lf
