--- a/.gitattributes
+++ b/.gitattributes
@@ -19,4 +19,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.jpeg filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+*jar binary
 MinecraftSoft/** text eol=lf
