--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -17,7 +17,7 @@ on:
   pull_request:
     branches: [ "Main" ]
   schedule:
-    - cron: '00 00 * * 1,2,3,4,5,6,0'
+    - cron: '00 00 * * 1-0'
 
 jobs:
   analyze:
