--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -23,7 +23,7 @@ on:
     # The branches below must be a subset of the branches above
     branches: [ "Main" ]
   schedule:
-    - cron: '00 01 * * 1-0'
+    - cron: '00 01 * * 1,2,3,4,5,6,0'
   workflow_dispatch:
 
 jobs:
