--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 # FUNDING.yml
 
-github: [GamerSoft24] # My GitHub account
-github: [Okmeque1] # My collaborator Okmeque1's GitHub account
+#github: [GamerSoft24] # My GitHub account
+#sgithub: [Okmeque1] # My collaborator Okmeque1's GitHub account
 patreon: GamerSoft24 # My Patreon
 #custom:
 #  - url: https://www.paypal.me/GamerSoft24
