Update CODEOWNERS reposoft

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,4 +9,5 @@
 /MinecraftSoft/ @GamerSoft24 @Okmeque1 @GmaerSoft42
 /MovieSoft/ @GamerSoft24 @Okmeque1 @GmaerSoft42
 /PySoft/ @GamerSoft24 @Okmeque1 @GmaerSoft42 @GS-ST
+/RepoSoft/ @GamerSoft24 @Okmeque1
 /VBSoft/ @GamerSoft24 @Okmeque1 @GS-ST
