--- a/.gitattributes
+++ b/.gitattributes
@@ -10,7 +10,7 @@
 #*.tar filter=lfs diff=lfs merge=lfs -text
 #*.tar.gz filter=lfs diff=lfs merge=lfs -text
 #*.rar filter=lfs diff=lfs merge=lfs -text
-#*.pkg filter=lfs diff=lfs merge=lfs -text
-#*.msi filter=lfs diff=lfs merge=lfs -text
-#*.exe filter=lfs diff=lfs merge=lfs -text
-#*.dmg filter=lfs diff=lfs merge=lfs -text
+*.pkg filter=lfs diff=lfs merge=lfs -text
+*.msi filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
+*.dmg filter=lfs diff=lfs merge=lfs -text
