updated the .gitignore file as file path to DAZ Loader v.2.2.2 was incorrect

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ ehthumbs.db
 *.temp
 
 # GitHub files
-InstallerSoft/Windows/Windows Loaders/Daz_Loader_v2.2.2_setup.exe
+InstallerSoft/Windows/Windows Loaders/DAZ Loader/v2.2.2/Daz_Loader_v2.2.2_setup.exe
 
 # JetBrains IntelliJ IDEA files
 .idea
