--- a/.gitattributes
+++ b/.gitattributes
@@ -4,12 +4,12 @@
 *.mkv filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
-#*.m4a filter=lfs diff=lfs merge=lfs -text
-#*.zip filter=lfs diff=lfs merge=lfs -text
-#*.7z filter=lfs diff=lfs merge=lfs -text
-#*.tar filter=lfs diff=lfs merge=lfs -text
-#*.tar.gz filter=lfs diff=lfs merge=lfs -text
-#*.rar filter=lfs diff=lfs merge=lfs -text
+*.m4a filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+*.7z filter=lfs diff=lfs merge=lfs -text
+*.tar filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
+*.rar filter=lfs diff=lfs merge=lfs -text
 *.pkg filter=lfs diff=lfs merge=lfs -text
 *.msi filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
