--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -3,6 +3,5 @@
 #github: [GamerSoft24] # My GitHub account
 #sgithub: [Okmeque1] # My collaborator Okmeque1's GitHub account
 patreon: GamerSoft24 # My Patreon
-#custom:
-#  - url: https://www.paypal.me/GamerSoft24
-#    label: "PayPal"
+buy_me_a_coffee: midnight_g0ldx
+custom: ["https://www.paypal.me/GamerSoft24", linktr.ee/gamersoft24]
