--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # CODEOWNERS file
-* @GamerSoft24
+* @GamerSoft24 @Okmeque1 @GmaerSoft42
 /.github/ @GamerSoft24
 /BatchSoft/ @GamerSoft24 @Okmeque1 @GmaerSoft42 @SutoEXEC
 /CPPSoft/ @GamerSoft24
