--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,6 +2,6 @@
 
 #github: [GamerSoft24] # My GitHub account
 #sgithub: [Okmeque1] # My collaborator Okmeque1's GitHub account
-patreon: GamerSoft24 # My Patreon
+patreon: T1taniumF0rge # My Patreon
 buy_me_a_coffee: midnight_g0ldx
 custom: ["https://www.paypal.me/GamerSoft24", linktr.ee/gamersoft24]
