--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,4 +4,13 @@
 #sgithub: [Okmeque1] # My collaborator Okmeque1's GitHub account
 patreon: T1taniumF0rge # My Patreon
 buy_me_a_coffee: midnight_g0ldx
-custom: ["https://www.paypal.me/GamerSoft24", linktr.ee/gamersoft24]
+open_collective: # Replace with a single Open Collective username
+ko_fi: # Replace with a single Ko-fi username
+tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
+community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
+liberapay: # Replace with a single Liberapay username
+issuehunt: # Replace with a single IssueHunt username
+lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
+polar: # Replace with a single Polar username
+thanks_dev: # Replace with a single thanks.dev username
+custom: ["https://www.paypal.me/GamerSoft24", "https://linktr.ee/gamersoft24"]
